Various changes to presentation slides.

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -82,15 +82,15 @@ Architektur, Life Sciences}}
   \begin{columns}[c] % the "c" option specifies center vertical alignment
     \begin{column}[T]{.5\textwidth} % column designated by a command
       \begin{itemize}
-        \item \textbf{Handlungsplan zur Lösung eines Problems}
-        \item Name abstammend von al-Chwarizmi (geb. 780, lt. Algorismi)
+        \item \textbf{Plan zur Lösung eines Problems}
+        \item Name abstammend von al-Chwarizmi (* 780, lt. Algorismi)
           % (lt. == latein) 
           % Al-Chwarizmi (Iraner)gilt als einer der bedeutendsten Mathematiker,
           % da er sich mit Algebra als elementarer Untersuchungsform
           % beschäftigte.  Er entwickelte sozusagen Algorithmen zur grafischen
           % lösung von linearen und quadratischen Gleichungen
-        \item Beispiel: Kochrezept, Lösungsverfahren für lin. oder quad. Gleichungen
-        \item Sehr relevant in der Informatik
+        \item Bsp.: Kochrezept, Lösungsverfahren für lin. oder quad. Gleichungen
+        \item Relevant in der Informatik
       \end{itemize}
     \end{column}
     \begin{column}[T]{.5\textwidth}
@@ -148,7 +148,6 @@ Architektur, Life Sciences}}
 \begin{frame}
   \section{Produkt}
   \frametitle{Das Produkt}
-  \framesubtitle{Wie soll's nun aussehen?}
     \begin{columns}
       \begin{column}[T]{0.5\textwidth}
         Pathfinding-Algorithmen brauchen einen Raum.
@@ -183,7 +182,7 @@ Architektur, Life Sciences}}
 
 \begin{frame}
   \frametitle{Das Produkt}
-  \framesubtitle{Korridore und Wände}
+  \framesubtitle{Pathfinding-Algorithmen werden angewendet}
   \begin{columns}
     \begin{column}[T]{0.5\textwidth}
       \begin{itemize}
