Add concept images.

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -146,6 +146,31 @@ Architektur, Life Sciences}}
 \end{frame}
 
 \begin{frame}
+  \frametitle{Konzept}
+  \framesubtitle{Einführungspage}
+  \begin{figure}
+    \includegraphics[height=7cm]{img/einfuehrung1.png}
+  \end{figure}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Konzept}
+  \framesubtitle{Pathfinding-Algorithmen-Vergleicher}
+  \begin{figure}
+    \includegraphics[height=7cm]{img/konzept1.png}
+  \end{figure}
+\end{frame}
+
+% Visualisierer
+%\begin{frame}
+%  \frametitle{Konzept}
+%  \framesubtitle{}
+%  \begin{figure}
+%    \includegraphics[height=6cm]{img/visualisierung1.png}
+%  \end{figure}
+%\end{frame}
+
+\begin{frame}
   \section{Tools}
   \frametitle{Tools}
   \framesubtitle{Entwicklungswerkzeuge und Umgebung}
