Rephrase sentences in presentation.

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -158,8 +158,11 @@ Architektur, Life Sciences}}
 \begin{frame}
   \frametitle{Einführung}
   \framesubtitle{Heuristik}
-  Bedeutet ``mit Begrenztem Wissen'' nach der Lösung suchen.
-  \includegraphics[height=3cm]{img/mathegrafix.jpg}
+  Bedeutet ``mit begrenztem Wissen'' nach der Lösung suchen.
+  \begin{figure}
+    \centering
+    \includegraphics[height=4.5cm]{img/mathegrafix.jpg}
+  \end{figure}
   \begin{equation*}
     d\big((x_1,y_1),(x_2,y_2)\big) = |x_1 - x_{2}| + |y_{1} - y_{2}|
   \end{equation*}
@@ -171,10 +174,10 @@ Architektur, Life Sciences}}
   \frametitle{Ziel}
   \framesubtitle{Was war das Ziel?}
   \begin{itemize}
-    \item Webapplikation, frei verfügbar
-    \item generieren Automatische Räume mit Hindernissen % für statistik zufällig generierte Wände simpel
+    \item Programmierung Webapplikation
+    \item Räume automatisch generieren mit Hindernissen % für statistik zufällig generierte Wände simpel
     \item Gleichzeitige Ausführung
-    \item Ergibt statistisch relevante Daten
+    \item Daten statistisch auswerten
   \end{itemize}
 \end{frame}
 
