Small changes on the presentation text.

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -125,7 +125,7 @@ Architektur, Life Sciences}}
     \item Programmierung Webapplikation
     \item Einbindung bestehendes Produkt PathFinding.js
     \item Räume automatisch generieren mit Hindernissen
-    \item Gleichzeitige Ausführung
+    \item Gleichzeitige Ausführung und Vergleich der Pathfinder
     \item Ausführungsdaten der Pathfinder sammeln
     \item Daten statistisch auswerten
   \end{itemize}
@@ -133,7 +133,7 @@ Architektur, Life Sciences}}
 
 \begin{frame}
   \frametitle{Konzept und Realisierung}
-  \framesubtitle{Struktur der Website}
+  \framesubtitle{Struktur der Webapplikation}
   Willkommenspage $\rightarrow$ Einführungspage $\rightarrow$ Visualisierer (weitere Einführung) $\rightarrow$ Pathfinding-Algorithmen-Vergleicher
 \end{frame}
 
@@ -142,6 +142,14 @@ Architektur, Life Sciences}}
   \framesubtitle{Einführungspage}
   \begin{figure}
     \includegraphics[height=7cm]{img/einfuehrung1.png}
+  \end{figure}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Konzept}
+  \framesubtitle{Einführung mit Einzeldemos der Pathfinder}
+  \begin{figure}
+    \includegraphics[height=7cm]{img/visualisierung1.png}
   \end{figure}
 \end{frame}
 
